# yap_django_admin_s1

01_doker_compose/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
01_doker_compose/app/: .gitignore  pyproject.toml  requirements.txt
01_doker_compose/app/config/: urls.py
01_doker_compose/app/config/components/: appdef.py
01_doker_compose/app/movies/: admin.py  models.py
01_doker_compose/app/movies/api/: urls.py
01_doker_compose/app/movies/api/v1/: views.py
01_doker_compose/app/movies/locale/en/LC_MESSAGES/: django.po
01_doker_compose/app/movies/locale/ru/LC_MESSAGES/: django.po
01_doker_compose/app/movies/migrations/: 0001_initial.py  0002_filwork_ext.py  0003_indexes.py  0004_null_true.py  0005_role.py
01_doker_compose/nginx/: nginx.conf
01_doker_compose/nginx/conf.d/: site.conf
02_django_api/: README.md
02_django_api/app/: gunicorn.conf.py
02_django_api/app/config/: .env.example  settings.py
02_django_api/app/config/components/: auth_password_validators.py  database.py
02_django_api/app/movies/api/v1/: base.py  urls.py
