[tool.poetry]
name = "s1_movies"
version = "0.1.0"
description = ""
authors = ["Maxim B. <wedontask@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django="3.2"
wheel="0.37.1"
python-dotenv="0.19.2"
django-split-settings="1.1.0"
psycopg2="2.9.3"
gunicorn="20.1.0"

[tool.poetry.dev-dependencies]
pre-commit="2.15.0"
wemake-python-styleguide="0.16"
django-debug-toolbar="3.2.4"
bandit="1.7.2"
pytest="6.2.5"
black="22.1.0"
flake8="4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
